[B]Version 1.0.5 - 2016-02-25[/B]

- Fixed icon
- Fixed typo in documentation
- Fixed ref to tv plugin
- Usign HTTP and not HTTPS anymore
- Added URL to forum



[B]Version 1.0.4 - 2016-01-17[/B]

- Improved documentation and link to video plugin



[B]Version 1.0.3 - 2015-11-28[/B]

- Improved fanart and added it to all channels
- Log to debug level
- Moved cache from temp to userdata/addon_data



[B]Version 1.0.2 - 2015-11-25[/B]

- Approved fork from from SomaFM for Intergalactic FM
- Artwork from Intergalactic FM
- Fanart from Yulia Vilensky



[B]Version 1.0.1 - 2015-01-01[/B]

- Fix playback on Android client



[B]Version 1.0.0 - 2014-10-09[/B]

- Use localized strings, supporting English and German for now
- Settings for caching the channel list and clearing the cache
- Include a donation reminder <3



[B]Version 0.1.0 - 2014-10-05[/B]

- Automatically select a stream and instantly start playback when station is selected
- Cache playlist files
- Settings for quality, format and firewall streams



[B]Version 0.0.2 - 2013-07-21[/B]

- Use SomaFM XML API.



[B]Version 0.0.1 - 2011-03-07[/B]

- Initial version.